--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.4.4",
+    "@mui/styles": "^5.5.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,11 +18,20 @@
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.0",
+    "connected-react-router": "^6.9.2",
+    "history": "^5.3.0",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.1.6"
+    "redux-saga": "^1.1.3",
+    "typescript": "^4.1.6",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
