--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.0",
     "connected-react-router": "^6.9.2",
+    "eslint-config-react-app": "6",
     "history": "^5.3.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
